--- a/src/scraping/templates/scraping/home.html
+++ b/src/scraping/templates/scraping/home.html
@@ -5,13 +5,14 @@
 {% block content %}
 {% for obj in object_list %}
         <div class="card my-3">
-          <div class="card-header">
-            <a href="{{obj.url}}">{{obj.title}}</a>
-          </div>
+          <h5 class="card-header"><a href="{{obj.url}}">{{obj.title}}</a></h5>
           <div class="card-body">
             <p class="card-text">{{ obj.description }}</p>
+              <p>{{ obj.city.name }} | {{ obj.language.name }} | <small>{{ obj.timestamp }}</small></p>
           </div>
         </div>
 
 {% endfor %}
 {% endblock %}
+
+
