--- a/src/scraping/templates/scraping/home.html
+++ b/src/scraping/templates/scraping/home.html
@@ -8,11 +8,19 @@
           <h5 class="card-header"><a href="{{obj.url}}">{{obj.title}}</a></h5>
           <div class="card-body">
             <p class="card-text">{{ obj.description }}</p>
-              <p>{{ obj.city.name }} | {{ obj.language.name }} | <small>{{ obj.timestamp }}</small></p>
+              <p>{{obj.city.name}} | {{obj.language.name}} | <small>{{ obj.timestamp }}</small></p>
           </div>
         </div>
 
 {% endfor %}
+
+<form method="GET", action="">
+    <label>Gorod:</label><br>
+    <input type="text" name="city"><br>
+    <label>Spesialnost:</label><br>
+    <input type="text" name="language"><br>
+    <input type="submit", value="Submit">
+</form>
 {% endblock %}
 
 
