--- a/src/scraping/templates/scraping/home.html
+++ b/src/scraping/templates/scraping/home.html
@@ -13,14 +13,19 @@
         </div>
 
 {% endfor %}
+<div class="row">
+    <div class="col-md-10 mx-auto my-3">
+        <form method="GET" action="">
+            <div class="form-group">
+                {{ form.as_p }}
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+<!--            <input type="submit", value="Submit">-->
+        </form>
+    </div>
 
-<form method="GET", action="">
-    <label>Gorod:</label><br>
-    <input type="text" name="city"><br>
-    <label>Spesialnost:</label><br>
-    <input type="text" name="language"><br>
-    <input type="submit", value="Submit">
-</form>
+</div>
+
 {% endblock %}
 
 
